--- a/app/views/alliances/edit.html.erb
+++ b/app/views/alliances/edit.html.erb
@@ -17,8 +17,8 @@
     <%= f.submit %>
 
     <div class="edit-form">
-      <%= link_to "Destroy this Alliance", alliance_path(@alliance), method: :delete, class: "delete alliance-link", :data => {:confirm => 'Are you sure?'} %>
+      <%= link_to "Destroy this Alliance", alliance_path(@alliance), method: :delete, class: "delete alliance-link", :data => {:confirm => 'This will destroy a ton of characters, are you sure?????'} %>
     </div>
-  <% end %>
-
+    <% end %>
+  </div>
 </div>
