--- a/app/views/species/edit.html.erb
+++ b/app/views/species/edit.html.erb
@@ -55,7 +55,7 @@
     </div>
 
     <div class="edit-form">
-      <%= f.submit %>
+      <%= f.submit :class => 'submit' %>
     </div>
 
     <div class="edit-form">
