--- a/app/views/homeworlds/show.html.erb
+++ b/app/views/homeworlds/show.html.erb
@@ -14,11 +14,21 @@
   <p>Terrain: <%= @planet.terrain %></p>
   <p>Population: <%= @planet.population %></p>
   <p>Gravity: <%= @planet.gravity %></p>
-  <p>Inhabiting Species</p>
-  <% @planet.species.each do |critter| %>
-    <ul>
-      <li><a href="<%= species_path(critter) %>"><%= critter.name %></a></li>
+
+  <% if @planet.species[0] != nil %>
+    <p>Inhabiting Species</p>
+      <ul class="show-page-list">
+      <% @planet.species.each do |critter| %>
+        <div class="index-box">
+          <a href="<%= species_path(critter) %>">
+            <li><%= critter.name %></li>
+            <img src="<%= critter.img_url %>" alt="<%= critter.name %>" class="character-show-img">
+          </a>
+        </div>
+      <% end %>
     </ul>
+  <% else %>
+    <p>Inhabiting Species: None</p>
   <% end %>
 
   <% if @planet.characters[0] != nil %>
@@ -34,24 +44,26 @@
       <% end %>
     </ul>
   <% else %>
-    <p>Notable Inhabitants: None</p>
+    <p>Notable <%= @planet.name %> Inhabitants: None</p>
   <% end %>
 
-  <% @films.sort! %>
-  <ul class="films">
-  <li class="film">Films:</li>
-    <% @films.each_with_index do |film, i| %>
-      <li class="film">
-        <% url_id = film[film.length-2].to_i %>
-        <% if url_id <= 3 %>
-          <% url_id = url_id + 3 %>
-        <% elsif url_id <=6 %>
-          <% url_id = url_id - 3 %>
-        <% end %>
-        Episode <%= url_id %>
-        <% if i < (@films.length - 1) %> ,
-        <% end %>
-      </li>
-    <% end %>
-  </ul>
+  <% if @films %>
+    <% @films.sort! %>
+    <ul class="films">
+    <li class="film">Films:</li>
+      <% @films.each_with_index do |film, i| %>
+        <li class="film">
+          <% url_id = film[film.length-2].to_i %>
+          <% if url_id <= 3 %>
+            <% url_id = url_id + 3 %>
+          <% elsif url_id <=6 %>
+            <% url_id = url_id - 3 %>
+          <% end %>
+          Episode <%= url_id %>
+          <% if i < (@films.length - 1) %> ,
+          <% end %>
+        </li>
+      <% end %>
+    </ul>
+  <% end %>
 </div
