almost done, created readme, working on landing page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 
   <body>
     <header class="top">
-      <h1 class="main-heading">Star Wars</h1>
+      <h1 class="main-heading"><a href="<%= root_path %>">Star Wars</a></h1>
       <p class="notice"><%= notice %></p>
       <p class="alert"><%= alert %></p>
       <div class="sub-headings">
