intro page working, video keeps playing though

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,1 +1,5 @@
-<iframe width="1152" height="698" src="http://play.starwars.com/html5/starwars_crawlcreator/?cid=null" frameborder="0" scrolling="no"></iframe>
+
+<video width="1152" height="698" autoplay>
+  <source src="/videos/intro.mp4" type="video/mp4">
+Your browser does not support the video tag.
+</video>
