changed backround url to image-url

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,7 +25,7 @@
 
 body {
   color: white;
-  background: url("277120-large-star-wars-backgrounds-x-retina.jpg") no-repeat center center fixed;
+  background: image-url("277120-large-star-wars-backgrounds-x-retina.jpg") no-repeat center center fixed;
   font-family: 'Josefin Sans', sans-serif;
 }
 
