--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,5 +1,5 @@
 
-<video width="1152" height="698" controls>
+<video width="1152" height="698" autoplay>
   <source src="/videos/intro.mp4" type="video/mp4">
 Your browser does not support the video tag.
 </video>
