updated landing page, and read me

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,5 +1,9 @@
-
-<video width="1152" height="698" controls>
+<div class="landing-page">
+  <h1 class="landing-text">Star Wars Wikipedia</h1>
+  <p class="landing-text">Made by Perry Fustero, &copy 2017</p>
+  <p class="landing-text">Watch the video below or click around on the links at the top of the page to get started</p>
+</div>
+<video width="492" height="298" controls>
   <source src="/videos/intro.mp4" type="video/mp4">
 Your browser does not support the video tag.
 </video>
