--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,18 +1,3 @@
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
- * vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
- * files in this directory. Styles in this file should be added after the last require_* statement.
- * It is generally better to create a new file per style scope.
- *
- *= require_tree .
- *= require_self
- */
 @font-face {
   font-family: "Jedi";
   src: font-url('star_jedi/starjedi/Starjedi.ttf') format("truetype");
@@ -72,8 +57,24 @@ h2 {
 .notice {
   color: blue;
 }
+
 .alert {
   color: red;
+}
+
+.landing-page {
+  color: yellow;
+  text-align: center;
+}
+
+.landing-text {
+  background: black;
+}
+
+video {
+  border: 1px white solid;
+  display: block;
+  margin: 0 auto;
 }
 
 .index-all {
